# tui-markdown-editor

./: Cargo.toml  README.md
src/: app.rs  cli.rs  config.rs  events.rs  file.rs  io.rs  main.rs  model.rs
src/app/: file.rs  input.rs  ui.rs
