[package]
name = "md-tui"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
comrak = "0.24.1"
confy = "0.6.1"
crossterm = "0.27.0"
ratatui = "0.26.3"
serde = { version = "1.0.203", features = ["derive"] }
tui-textarea = "0.4.0"
